[gd_scene format=3 uid="uid://b6y7u8jao0p1q"]

[ext_resource type="Script" path="res://Screens/quest_window.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_window"]
bg_color = Color(0.05, 0.05, 0.08, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.443137, 0.388235, 0.231373, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 10

[node name="QuestWindow" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_window")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="QuestTitle" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Quest Titel"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContent" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="QuestDescription" type="Label" parent="Panel/VBoxContainer/ScrollContainer/VBoxContent"]
unique_name_in_owner = true
layout_mode = 2
text = "Dies ist die Beschreibung der Quest. Hier steht was du tun musst."
autowrap_mode = 3

[node name="ObjectivesHeader" type="Label" parent="Panel/VBoxContainer/ScrollContainer/VBoxContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Ziele:"

[node name="ObjectiveList" type="ItemList" parent="Panel/VBoxContainer/ScrollContainer/VBoxContent"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
auto_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="AcceptButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Annehmen"

[node name="RewardButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Belohnung"

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Schlie√üen"
